   - Selection is highlighted with a marker
   - Markers may also be set on objects using the right-click context menu
   - Added mark/unmark commands for scripts
   - Bound Ctrl+K to toggle display of markers
   - Added flash messages indicating on|off status of markers 
   - Implemented markers into KDE interface	
* Added triangle-accurate picking of mesh objects
* Multiview
   - Ctrl+R : split view vertically
   - Ctrl+U : split view horizontally
   - TAB    : cycle active view
   - DEL    : delete active view
   - Ctrl+D : delete all views except active one
   - Views may be resized by dragging on borders
   - Multview functions also available in the view menu
* Eliminated eclipse shadows appearing on wrong side of planet
* Added support for specular and bump map effects across a wider range
  of graphics hardware.
   - Introduced notion of a render path
   - Ctrl+V changed to cycle render path instead of toggle vertex shader
   - Added IgnoreGLExtensions directive for celestia.cfg
* Added track command for script
* Fixed eclipse shadow z-fighting artifacts
* Fixed vertical mirroring of textures on 3DS models
* Fixed problems with bump mapping
* Enabled loading of .cel scripts through the Windows or KDE shell
* New directory structure for add-ons; meshes, textures, and other media
  may now be located withing an add-on subdirectory.
* Added texture for Eros
* Added separate cloud and surface textures for Venus
* New "invisible" class for solar system objects
* Fixed crashes that occurred when viewing ringed planets on older hardware
* Got rid of three zeros after decimal point when displaying time rate
* Updated configuration files for new versions of autoconf

1.3.1
* Improved inclusion of light travel delay, also in KDE time setting dialog 
* Fixed lookback command for subsequent changes of target speed
* Allow wildcard character * inplace of extension for texture filenames
* Fix bump mapping (again)
* Use standard normal maps instead of x-reversed ones
